Se actualiza gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 django\Apuntes\*
+django\Codeninja\db.sqlite3
+django\Codeninja\Codeninja\__pycache__\*
+django\Codeninja\core\__pycache__\*
 django\Pig23654-Grupo18\*
